--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,17 @@ env:
 
 jobs:
     etherscan-tests:
-        name: etherscan tests
-        runs-on: ubuntu-latest
+        name: etherscan tests (${{ matrix.os }})
+        runs-on: ${{ matrix.os}}
         timeout-minutes: 30
+        strategy:
+            fail-fast: false
+            matrix:
+                os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+                rust: ["stable", "beta", "nightly", "1.65"]
+                exclude:
+                    - rust: "1.66" # MSRV
+                      flag: "--all-features"
         concurrency: etherscan-tests-${{ github.head_ref || github.run_id }}
         steps:
             - uses: actions/checkout@v3
