--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,9 @@ jobs:
             fail-fast: false
             matrix:
                 os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-                rust: ["stable", "beta", "nightly", "1.65"]
+                rust: ["stable", "beta", "nightly", "1.66"] # MSRV
                 exclude:
                     - rust: "1.66" # MSRV
-                      flag: "--all-features"
         concurrency: etherscan-tests-${{ github.head_ref || github.run_id }}
         steps:
             - uses: actions/checkout@v3
