--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+                os: ["ubuntu-latest"]
                 rust: ["stable", "beta", "nightly", "1.66"] # MSRV
                 exclude:
                     - rust: "1.66" # MSRV
