--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
             fail-fast: false
             matrix:
                 os: ["ubuntu-latest"]
-                rust: ["stable", "beta", "nightly", "1.66"] # MSRV
+                rust: ["stable", "1.66"] # MSRV
                 exclude:
                     - rust: "1.66" # MSRV
         concurrency: etherscan-tests-${{ github.head_ref || github.run_id }}
