--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "foundry-block-explorers"
-authors = ["Foundry Maintainers"]
-readme = "README.md"
+version = "0.1.0"
+edition = "2021"
+rust-version = "1.65"
+authors = ["Foundry Contributors"]
 license = "MIT OR Apache-2.0"
 description = "Bindings for Etherscan.io and other block explorer APIs"
 keywords = ["crypto", "ethers", "ethereum", "web3", "etherscan"]
-version = "0.1.0"
-edition = "2021"
+homepage = "https://github.com/foundry-rs/block-explorers"
+repository = "https://github.com/foundry-rs/block-explorers"
 
 [package.metadata.docs.rs]
 all-features = true
@@ -16,8 +18,6 @@ rustdoc-args = ["--cfg", "docsrs"]
 all-features = true
 
 [dependencies]
-foundry-compilers = { version = "0.1", optional = true }
-
 alloy-chains = "0.1"
 alloy-json-abi = { version = "0.4", default-features = false, features = ["std", "serde_json"] }
 alloy-primitives = { version = "0.4", default-features = false, features = ["std", "serde"] }
@@ -28,6 +28,8 @@ serde_json = "1.0"
 thiserror = "1.0"
 tracing = "0.1.37"
 semver = "1.0"
+
+foundry-compilers = { version = "0.1", optional = true }
 
 [dev-dependencies]
 tempfile = "3.8"
