chore: fix cliff, update CHANGELOG

--- a/release.toml
+++ b/release.toml
@@ -6,3 +6,4 @@ sign-commit = true
 sign-tag = true
 shared-version = true
 pre-release-commit-message = "chore: release {{version}}"
+pre-release-hook = ["sh", "-c", "$WORKSPACE_ROOT/scripts/changelog.sh --tag {{version}}"]
