move to crates folder

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = [
-    "block-explorers"
+    "crates/*"
 ]
 
 # Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
