--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,13 @@ members = [
 # Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
 # https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
 resolver = "2"
+
+[workspace.dependencies]
+alloy-chains = "0.1"
+alloy-primitives = { version = "0.7", default-features = false, features = ["std", "serde"] }
+
+reqwest = { version = "0.12", default-features = false, features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
+tokio = { version = "1.37" }
