--- a/crates/block-explorers/Cargo.toml
+++ b/crates/block-explorers/Cargo.toml
@@ -20,13 +20,13 @@ rustdoc-args = ["--cfg", "docsrs"]
 all-features = true
 
 [dependencies]
-alloy-chains = "0.1"
+alloy-chains.workspace = true
 alloy-json-abi = { version = "0.7", default-features = false, features = ["std", "serde_json"] }
-alloy-primitives = { version = "0.7", default-features = false, features = ["std", "serde"] }
+alloy-primitives = { workspace = true, default-features = false, features = ["std", "serde"] }
 
-reqwest = { version = "0.12", default-features = false, features = ["json"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+reqwest = { workspace = true, default-features = false, features = ["json"] }
+serde = { workspace = true, features = ["derive"] }
+serde_json.workspace = true
 thiserror = "1.0"
 tracing = "0.1.37"
 semver = "1.0"
@@ -35,7 +35,7 @@ foundry-compilers = { version = "0.3", optional = true }
 
 [dev-dependencies]
 tempfile = "3.8"
-tokio = { version = "1.32", features = ["macros", "rt-multi-thread", "time"] }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
 serial_test = "3.0.0"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
 
