--- a/deny.toml
+++ b/deny.toml
@@ -7,7 +7,7 @@ notice = "warn"
 
 [bans]
 multiple-versions = "warn"
-wildcards = "deny"
+wildcards = "allow"
 highlight = "all"
 
 [licenses]
@@ -53,3 +53,6 @@ license-files = [{ path = "LICENSE", hash = 0x001c7e6c }]
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
+allow-git = [
+    "https://github.com/alloy-rs/alloy"
+]
