--- a/deny.toml
+++ b/deny.toml
@@ -30,6 +30,7 @@ allow = [
     "LicenseRef-ring",
     # https://github.com/briansmith/webpki/issues/148
     "LicenseRef-webpki",
+    "BSL-1.0"
 ]
 
 exceptions = [
