--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 tokio = { version = "1.37" }
+
+[patch.crates-io]
+foundry-compilers-project = { git = "https://github.com/foundry-rs/compilers", rev = "12d3173" }
