--- a/crates/block-explorers/Cargo.toml
+++ b/crates/block-explorers/Cargo.toml
@@ -31,7 +31,7 @@ thiserror = "1.0"
 tracing = "0.1.37"
 semver = "1.0"
 
-foundry-compilers = { version = "0.7", optional = true }
+foundry-compilers = { package = "foundry-compilers-project", version = "0.7", optional = true }
 
 [dev-dependencies]
 tempfile = "3.8"
