chore: use crates alloy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ resolver = "2"
 [workspace.dependencies]
 alloy-chains = "0.1"
 alloy-primitives = { version = "0.7", default-features = false, features = ["std", "serde"] }
+alloy-rpc-types-eth = "0.1"
+alloy-eips = "0.1"
+alloy-serde = "0.1"
 
 reqwest = { version = "0.12", default-features = false, features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
