--- a/crates/block-explorers/Cargo.toml
+++ b/crates/block-explorers/Cargo.toml
@@ -21,8 +21,14 @@ all-features = true
 
 [dependencies]
 alloy-chains.workspace = true
-alloy-json-abi = { version = "0.7", default-features = false, features = ["std", "serde_json"] }
-alloy-primitives = { workspace = true, default-features = false, features = ["std", "serde"] }
+alloy-json-abi = { version = "0.7", default-features = false, features = [
+    "std",
+    "serde_json",
+] }
+alloy-primitives = { workspace = true, default-features = false, features = [
+    "std",
+    "serde",
+] }
 
 reqwest = { workspace = true, default-features = false, features = ["json"] }
 serde = { workspace = true, features = ["derive"] }
@@ -31,7 +37,7 @@ thiserror = "1.0"
 tracing = "0.1.37"
 semver = "1.0"
 
-foundry-compilers = { version = "0.8", optional = true }
+foundry-compilers = { version = "0.9", optional = true }
 
 [dev-dependencies]
 tempfile = "3.8"
