chore: allow paste

--- a/deny.toml
+++ b/deny.toml
@@ -1,7 +1,10 @@
 [advisories]
 version = 2
 yanked = "warn"
-ignore = []
+ignore = [
+    # https://rustsec.org/advisories/RUSTSEC-2024-0436 paste! is unmaintained
+    "RUSTSEC-2024-0436",
+]
 
 [bans]
 multiple-versions = "warn"
