--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,14 +17,15 @@ edition = "2021"
 exclude = [".github/", "scripts/", "test-data/"]
 
 [workspace.dependencies]
-alloy-chains = "0.1"
-alloy-primitives = { version = "0.8", default-features = false, features = [
+alloy-chains = "0.2"
+alloy-primitives = { version = "1.0", default-features = false, features = [
     "std",
     "serde",
 ] }
-alloy-rpc-types-eth = "0.13"
-alloy-eips = "0.13"
-alloy-serde = "0.13"
+alloy-json-abi = { version = "1.0", default-features = false }
+alloy-rpc-types-eth = "0.15"
+alloy-eips = "0.15"
+alloy-serde = "0.15"
 
 reqwest = { version = "0.12", default-features = false, features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
