--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 tokio = { version = "1.37" }
+
+[patch.crates-io]
+foundry-compilers = { git = "https://github.com/foundry-rs/compilers.git", rev = "d05c34a" }
