--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ on:
 # many as you want)
 env:
   CARGO_TERM_COLOR: always
-  ETHERSCAN_API_KEY: "I5BXNZYP5GEDWFINGVEZKYIVU2695NPQZB"
+  ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY || 'I5BXNZYP5GEDWFINGVEZKYIVU2695NPQZB' }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
